--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "all": "concurrently --kill-others \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^9.18.0",
     "pinia": "^2.0.33",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
