--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,15 @@
     "express": "^4.18.2",
     "firebase": "^9.18.0",
     "pinia": "^2.0.33",
-    "sweetalert2": "^11.7.3",
+    "sweetalert2": "^11.4.8",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.1.4"
   }
 }
